feat: notice fix

--- a/conding-pikka_user/src/main/resources/application.properties
+++ b/conding-pikka_user/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=conding-pikka_user
+spring.datasource.url=jdbc:mysql://localhost:3306/pikka
+spring.datasource.username=pikka
+spring.datasource.password=pikka
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
